FrontEnd/Modules/Base/Css/kendo.wiser.css
/* KENDO - SPLITTER */
.pane-content {
	height: auto;
	background-color: var(--item-bg-color);
	min-height: calc(100% - 65px);
	padding: 0;
	position: relative;
}
#left-pane .pane-content {
	min-height: 100%;
}
.itemWindowForm {
	height: 100%;
}
.pane-content .k-treeview {
	min-height: calc(100vh - 155px);
	overflow-x: hidden;
	padding-top: 15px;
	padding-left: 15px;
	box-sizing: border-box;
}
.pane-content .item .k-treeview {
	min-height: initial;
}
.k-window-content {
	background-color: var(--item-bg-color);
	padding: 0;
	width: 100%;
	height: 100%;
	padding-bottom: 65px;
}
.k-window-content.k-dialog-content {
	padding: 16px;
	height: 100% !important;
}
.k-window-content.html-source-window {
	overflow: hidden;
}
.k-edit-buttons {
	min-height: 54px;
}
.k-window-content .pane-content > p {
	padding: 16px;
}
.pane-content header {
	background: var(--white-color);
	padding: 10px;
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	z-index: 150;
}
.pane-content + footer {
	background: var(--white-color);
	border-top: 1px solid #dddddd;
	border-radius: 0 0 var(--large-radius) var(--large-radius);
	box-sizing: content-box;
	padding: 10px;
	z-index: 250;
	min-height: 47px;
	position: fixed;
	left: 0;
	right: 0;
	top: 100%;
	transform: translateY(-100%);
}
#right-pane .pane-content + footer {
	position: -webkit-sticky;
	position: sticky;
	bottom: 0;
	left: auto;
	right: auto;
	top: auto;
	transform: none;
	margin-top: auto;
	min-height: fit-content;
}

/* KENDO - IMAGE UPLOAD */
.uploader {
	background: var(--white-color);
	border: 1px solid rgba(20, 53, 80, 0.14);
	box-sizing: border-box;
	margin: 5px 0;
	padding: .8em;
	width: 100%;
	gap: 5px;
	flex-wrap: wrap;
}
.k-dropzone.k-dropzone-hovered {
	border: 2px dashed var(--error-bg-color);
}
.uploader .imagesContainer {
	display: flex;
	gap: 5px;
}
.dropZoneElement {
	position: relative;
	display: inline-block;
	background-color: var(--lightest-color);
	border: 1px solid var(--dark-bd-color);
	height: 110px;
	text-align: center;
	flex-grow: 1;
	min-width: 250px;
}
.textWrapper {
	position: absolute;
	top: 0;
	bottom: 0;
	width: 100%;
	font-size: 24px;
	line-height: 1.2em;
}
.dropImageHereText {
	color: var(-dark-bd-color);
	font-size: 12px;
	height: 100%;
	text-transform: uppercase;
}
.dropImageHereText strong {
	color: var(--black-color);
	display: block;
	font-size: 15px;
	padding-top: 30px;
}
.dropImageHereText strong ins {
	font-size: 24px;
	margin-right: 5px;
	vertical-align: sub;
}
.dropImageHereText span {
	display: block;
}
.k-dropzone-hovered, .k-dropzone-hovered strong {
	background: var(--white-color);
}
.uploader .product {
	background-color: var(--black-color);
	float: left;
	position: relative;
	margin: 0;
	padding: 0;
	cursor: move;
}
.product img {
	width: 110px;
	height: 110px;
	object-fit: contain;
}
.uploader + .k-upload {
	width: 100%;
}
.wrapper:after {
	content: ".";
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
}
.uploader:after {
	display: none;
}
.checkGroup label {
	display: inline-block;
	height: 30px;
	line-height: 30px;
	margin: 8px 2px 0 0;
}
.checkGroup label span {
	background: var(--white-color);
	border: 1px solid var(--handle-bg-color);
	border-radius: 2px;
	display: block;
	height: 30px;
	line-height: 30px;
	padding: 0 10px;
	min-width: 50px;
	text-align: center;
}
.checkGroup label input:checked + span {
	background-color: var(--color-1);
	border: 1px solid var(--color-1);
	color: var(--white-color);
}
.k-file-id-wrapper, .k-file-name-size-wrapper {
	display: inline-block;
	height: 100%;
	line-height: 1.5em;
	margin-left: 10px;
	min-height: 65px;
	min-width: 75px;
	padding-left: 10px;
	position: relative;
	vertical-align: top;
}
.k-file-id-wrapper {
	padding: 5px 10px;
}
.k-file-name-size-wrapper {
	border-left: 1px solid var(--handle-bg-color);
	width: calc(100% - 200px);
}
.k-file {
	background-color: var(--lighter-color);
	font-size: 12px;
}
.k-file-name {
	background-color: var(--white-color);
	line-height: 1.5em;
	margin-bottom: 3px;
	padding: 5px;
}
.k-file-success .k-file-name {
	color: var(--dark-txt);
}
.k-file-name a {
	color: var(--color-1);
}
.k-file-size {
	line-height: 1.5em;
}
.k-fil-id > span:first-child, .k-file-id > span:first-child {
	font-weight: bold;
}
.k-file-name > span:first-child {
	display: inline-block;
	font-weight: bold;
	text-indent: 2px;
	width: 100px;
}
.k-file-name > a.name,
.k-file-name > span.title {
	display: inline-block;
	min-height: 1.5em;
	overflow: hidden;
	text-overflow: ellipsis;
	vertical-align: top;
	width: calc(100% - 125px);
	white-space: nowrap;
}
.k-file-name > a.name {
	/* So that users can still open files in a readonly file-upload. */
	pointer-events: all !important;
	cursor: pointer !important;
}
.k-file-extension-wrapper:before {
	background-color: var(--lighter-color);
}
.k-file-extension {
	margin-left: .4em;
	margin-right: .4em;
	text-align: center;
	width: calc(100% - .8em);
}

/* KENDO - CUSTOM CSS */
.k-button {
	font-family: var(--medium-txt);
	font-weight: 400;
	font-size: 14px;
	line-height: 18px;
	padding: 12px 8px;
	text-transform: none;
}
.k-button-icontext .k-icon,
.k-button-icontext .k-image,
.k-button-icontext .k-sprite {
	margin: 0 8px 0 0;
}
.k-button-icontext .k-i-refresh,
.k-button-icontext .k-i-filter-clear,
.k-button-icontext .k-i-wiser-maximize {
	margin: 0;
}
#buttons > span,
.buttons > span {
	display: flex;
	justify-content: space-between;
	margin-top: 10px;
}
#buttons > span .k-button,
.buttons > span .k-button {
	margin: 0;
}
.item > .k-button {
	margin: 5px 0 0 0;
	background-color: var(--white-color);
	height: 42px;
	width: 100%;
}
.k-button:not(.loading) .loadingText,
.k-button:not(.loading) .loader-icon,
.k-button.loading .originalText{
	display: none;
}
.k-blue,
.item > .k-blue {
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	color: var(--white-color);
}
/* ... */

